Debugging Google Cloud Deployment
These changes should help make it more likely to work with google cloud
deployment.

--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,5 @@
-runtime: python36
+runtime: python37
 
 handlers:
 - url: /.*
-  script: app.py
-
-libraries:
-- name: flask
-  version: latest
+  script: auto
